--- a/wp-content/themes/ikonic-assessment/parts/header.html
+++ b/wp-content/themes/ikonic-assessment/parts/header.html
@@ -1,7 +1,7 @@
 <!-- wp:group {"layout":{"type":"constrained"}} -->
 <div class="wp-block-group">
 
-    <!-- wp:navigation {"menuSlug":"primary-menu","layout":{"type":"flex","justifyContent":"space-between"}} /-->
+    <!-- wp:navigation {"menuSlug":"primary-menu","layout":{"type":"flex","justifyContent":""}} /-->
 
 </div>
 <!-- /wp:group -->
